<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/pantry_chef"
        android:textAlignment="center"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/yourListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/view_your_list"
        android:textSize="20sp"
        android:onClick="viewIngredients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

    <TextView
        android:id="@+id/addIngredientsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:text="@string/add_your_ingredients_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourListButton" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/editTextLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addIngredientsText">

        <EditText
            android:id="@+id/ingredientEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/enter_an_ingredient"
            android:autofillHints="" />
        <ImageButton
            android:id="@+id/ingredientSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="writeIngredient"
            android:layout_marginStart="20dp"
            app:srcCompat="@android:drawable/ic_menu_save"
            android:contentDescription="@string/save_ingredient_to_your_list" />
    </LinearLayout>

    <TextView
        android:id="@+id/addFromReceiptText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/add_from_receipt"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLayout" />

    <LinearLayout
        android:id="@+id/ReceiptAddLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFromReceiptText"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/pictureButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="takePicture"
            app:srcCompat="@android:drawable/ic_menu_camera"
            tools:ignore="SpeakableTextPresentCheck"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/scanTextButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="Scan Receipt"
            app:srcCompat="@android:drawable/ic_menu_camera"
            tools:ignore="SpeakableTextPresentCheck"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/FrameLayout"
        android:layout_width="358dp"
        android:layout_height="202dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReceiptAddLayout">

        <ImageView
            android:id="@+id/receiptImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.439"
            android:layout_margin="20dp"/>

        <com.sauregurke.myapplication.GraphicOverlay
            android:id="@+id/graphic_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@+id/receiptImageView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/receiptImageView"
            app:layout_constraintRight_toRightOf="@+id/receiptImageView"
            app:layout_constraintTop_toTopOf="@+id/receiptImageView"
            app:layout_constraintVertical_bias="0.0"
            android:layout_margin="20dp"/>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>